# epick

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  epick-4e64f4bc505ca3f5.js  epick-4e64f4bc505ca3f5_bg.wasm  epick-5f2b9cfb3b347e4b.js  epick-5f2b9cfb3b347e4b_bg.wasm  epick-785ba9f371d8fe50.js  epick-785ba9f371d8fe50_bg.wasm  epick-92a4d44eed464769.js  epick-92a4d44eed464769_bg.wasm  epick-98c8bbab18967b58.js  epick-98c8bbab18967b58_bg.wasm  epick-b923420d886f6b13.js  epick-b923420d886f6b13_bg.wasm  epick.js  epick_bg.wasm  index.html  meson.build  pkger.yml  sw.js
.github/actions/lint/: action.yml
.github/actions/test/: action.yml
.github/workflows/: build.yml  build_pr.yml  build_push.yml  release.yml
assets/: epick.desktop
assets/app-icon-macos/: Template - Icon - App.afphoto  icon.afphoto
assets/app-icon-macos/icon/: AppIcon.icns  generate_icons.sh
build-aux/: cargo.sh  com.vv9k.Epick.yaml  dist-vendor.sh
docs/: epick.js  epick_bg.wasm  index.html  testgui.js  testgui_bg.wasm  wasm.js
scripts/: build_web.sh  start_server.sh
scripts/homebrew/: AppIcon.icns  build_cask.sh  build_cask.swift  build_homebrew.sh  install_epick_homebrew.sh  parse_sha.swift  test.rb
scripts/homebrew/app/epick.app/Contents/: Info.plist
scripts/homebrew/app/epick.app/Contents/Resources/: AppSettings.plist  script
src/: app.rs  color.rs  context.rs  error.rs  keybinding.rs  lib.rs  main.rs  math.rs  render.rs  screen_size.rs  settings.rs  zoom_picker.rs
src/app/: color_format.rs  color_picker.rs  context.rs  keybinding.rs  mod.rs  palette.rs  palettes.rs  picker.rs  render.rs  saved_colors.rs  scheme.rs  screen_size.rs  settings.rs  sidepanel.rs  sliders.rs  ui.rs  windows.rs
src/app/color_picker/: mod.rs
src/app/display_picker/: macos.rs  windows.rs  x11.rs
src/app/ui/: colorbox.rs  layout.rs  mod.rs  slider_1d.rs  slider_2d.rs
src/app/ui/windows/: custom_formats.rs  export.rs  help.rs  mod.rs  settings.rs
src/app/window/: custom_formats.rs  export.rs  help.rs  mod.rs  palette_formats.rs  settings.rs
src/app/windows/: export.rs  help.rs  mod.rs  settings.rs
src/color/: chromatic_adaptation.rs  cmyk.rs  colorspace.rs  format.rs  gradient.rs  hsl.rs  hsv.rs  illuminant.rs  lab.rs  lch.rs  lch_ab.rs  lch_uv.rs  luv.rs  mod.rs  palette.rs  palettes.rs  rgb.rs  working_space.rs  xyy.rs  xyz.rs
src/color_picker/: mod.rs  sliders.rs
src/display_picker/: macos.rs  mod.rs  windows.rs  x11.rs
src/math/: matrix1x3.rs  matrix3x3.rs  mod.rs
src/picker/: mod.rs  windows.rs  x11.rs
src/ui/: colorbox.rs  layout.rs  mod.rs  slider_1d.rs  slider_2d.rs
src/wm_picker/: macos.rs  mod.rs  windows.rs  x11.rs
