[package]
name = "epick"
version = "0.8.1"
authors = ["Wojciech Kępka <wojciech@wkepka.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.18", features = ["persistence"] }
egui = { version = "0.18", features = ["tracing"] }
epaint = "0.18"
arboard = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
dirs = "4"
nom = "7"
image = "0.24"
once_cell = "1"

#pretty_env_logger = "0.4"
#tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }
#tracing = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.9", features = ["image", "cursor", "resource_manager"] }

[target.'cfg(windows)'.dependencies]
windows = "0.32"

[target.'cfg(windows)'.build-dependencies]
windows = "0.32"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-dialog = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc = {version = "0.2", features = ["exception"]}
core-graphics = {version = "0.22"}


[dev-dependencies]
tempdir = "0.3"
